--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,6 +21,9 @@ rootProject.allprojects {
         maven{
             url "http://108.160.143.119:8081/content/repositories/HLibrary-Releases"
         }
+        maven{
+            url "http://108.160.143.119:8081/content/repositories/HLibrary-Snapshots"
+        }
     }
 }
 
@@ -45,5 +48,5 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:support-v4:27.1.1'
-    implementation "com.hlibrary.util:utillibrary:0.0.1"
+    implementation "com.hlibrary.util:utillibrary:0.0.2.1-SNAPSHOT"
 }
