--- a/example/android/local.properties
+++ b/example/android/local.properties
@@ -3,3 +3,4 @@ sdk.dir=/Users/linwenhui/Library/Android/sdk
 flutter.sdk=/Users/linwenhui/flutter
 flutter.versionName=1.0.0
 flutter.versionCode=1
+flutter.buildMode=debug
