--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,14 +2,14 @@ group 'com.hdlang.flutter.flutterpermissions'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.2.30'
+    ext.kotlin_version = '1.3.10'
     repositories {
         google()
         jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.4'
+        classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -18,8 +18,23 @@ rootProject.allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url "http://108.160.143.119:8081/content/repositories/YFWL-Releases"
+        }
+        maven {
+            url "http://108.160.143.119:8081/content/repositories/YFWL-Snapshots"
+        }
+        maven {
+            url "http://108.160.143.119:8081/content/repositories/HLibrary-Releases"
+        }
+        maven {
+            url "http://108.160.143.119:8081/content/repositories/HLibrary-Snapshots"
+        }
         maven{
-            url "http://108.160.143.119:8081/content/groups/public/"
+            url 'http://maven.aliyun.com/nexus/content/groups/public/'
+        }
+        maven {
+            url 'https://dl.bintray.com/kotlin/kotlin-dev/'
         }
     }
 }
@@ -45,5 +60,5 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:support-v4:27.1.1'
-    implementation "com.hlibrary.util:utillibrary:0.0.3.2-SNAPSHOT"
+    implementation "com.hlibrary.util:utillibrary:0.0.4"
 }
