--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: flutter_permissions
-description: A new Flutter plugin.
+description: 权限申请.
 version: 0.0.1
-author:
-homepage:
+author: linwh <linwenhui0@aliyun.com>
+homepage: https://github.com/linwenhui0/flutter_permissions.git
 
 environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
@@ -10,6 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
