--- a/android/build.gradle
+++ b/android/build.gradle
@@ -58,7 +58,7 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation "com.hlibrary.util:utillibrary:0.0.9"
+    compileOnly "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    compileOnly 'androidx.appcompat:appcompat:1.0.2'
+    compileOnly "com.hlibrary.util:utillibrary:0.0.10.8-SNAPSHOT"
 }
