--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_permissions
 description: 权限申请.
 version: 0.0.1
-author: linwh <linwenhui0@aliyun.com>
+author: linwh <lwh8278222@gmail.com>
 homepage: https://github.com/linwenhui0/flutter_permissions.git
 
 environment:
