--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -15,6 +15,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url "http://207.246.93.94:8081/nexus/content/groups/public/"
+        }
     }
 }
 
