--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_permissions
 description: 权限申请.
-version: 0.0.2
+version: 0.0.2+1
 author: linwh <lwh8278222@gmail.com>
 homepage: https://github.com/linwenhui0/flutter_permissions.git
 
