--- a/android/build.gradle
+++ b/android/build.gradle
@@ -51,6 +51,6 @@ android {
 dependencies {
     compileOnly "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     compileOnly 'androidx.appcompat:appcompat:1.0.2'
-    implementation "com.hlibrary.util:utillibrary:0.0.11"
+    compileOnly "com.hlibrary.util:utillibrary:0.0.15"
     implementation 'com.alibaba:fastjson:1.2.51'
 }
