--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_web_plugins:
+    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
@@ -18,8 +19,15 @@ dependencies:
 # The following section is specific to Flutter.
 flutter:
   plugin:
-    androidPackage: com.hdlang.flutter.flutterpermissions
-    pluginClass: FlutterPermissionsPlugin
+    platforms:
+      android:
+        package: com.hdlang.flutter.flutterpermissions
+        pluginClass: FlutterPermissionsPlugin
+      ios:
+        pluginClass: FlutterPermissionsPlugin
+      web:
+        pluginClass: FlutterPermissionsWebPlugin
+        fileName: flutter_permissions_web.dart
 
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
