--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -1,12 +1,12 @@
 buildscript {
-    ext.kotlin_version = '1.3.61'
+    ext.kotlin_version = '1.3.50'
     repositories {
         google()
         jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:3.5.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -16,8 +16,9 @@ allprojects {
         google()
         jcenter()
         maven {
-            url 'https://git.oschina.net/companycode/mvn-repo/raw/master/releases/'
+            url 'https://gitee.com/companycode/mvn-repo/raw/master/releases/'
         }
+
     }
 }
 
