--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -46,11 +46,25 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
+    signingConfigs {
+        release {
+            keyAlias 'wechat'
+            keyPassword 'lwh123456'
+            storeFile file('/Users/linwenhui/game/keystore/android/keystore.jks')
+            storePassword 'lwh123456'
+        }
+    }
+
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
+            minifyEnabled false
+            shrinkResources false
+        }
+        debug {
+            signingConfig signingConfigs.release
         }
     }
 }
